!!! Important: When the server development is ready, please discard all commits above (and including this one), and re-develop from one commit below Apr. 7: Added the mock part Will show Continue button 3 seconds later Then when user click Continue, it will go to AgreementActivity and both person will get a partial responsibility

--- a/app/src/main/res/layout/activity_judgement_sending.xml
+++ b/app/src/main/res/layout/activity_judgement_sending.xml
@@ -153,7 +153,6 @@
             android:text="@string/judgement_sending_button_continue"
             android:textColor="@color/text"
             android:textSize="@dimen/medium"
-            android:gravity="center"
-            android:visibility="gone"/>
+            android:gravity="center" />
     </LinearLayout>
 </LinearLayout>
